--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,11 @@
-useDynLib(BayesTree)
+useDynLib(pgbart)
 
-export(bart,pdbart,pd2bart,plot.bart,makeind)
-
+export(pgbart_train,pgbart_predict,
+       pdpgbart,pd2pgbart,plot.pgbart,
+      makeind)
 importFrom(nnet,class.ind)
 importFrom("graphics", "abline", "contour", "image", "lines", "par","plot", "title")
 importFrom("stats", "lm", "pnorm", "quantile")
 
-S3method(plot, bart)
-S3method(plot, pdbart)
-S3method(plot, pd2bart)
+S3method(plot, pgbart)
+
